# dane-download-worker

./: .dockerignore  .flake8  .gitignore  Dockerfile  Pipfile  README.md  base_config.yml  base_util.py  codemeta.json  config-k8s.yml  config_k8s.yml  config_test.yml  dl_request_generator.py  example-settings.py  http_download.py  http_util.py  model.py  pyproject.toml  requirements.txt  s3_download.py  s3_util.py  worker.py
.github/: dependabot.yml
.github/workflows/: _build-push-cached-ecr.yml  _build-push-cached-ghcr.yml  _test.yml  aws-ecr.yml  main-branch.yml  manual-deploy.yml  pre-commit.yml
scripts/: pre-commit
tests/: unit-test.sh
tests/unit/: base_util_test.py  conftest.py  http_download_test.py  http_util_test.py  s3_download_test.py  worker_test.py
tests/unit_tests/: base_util_test.py  conftest.py  worker_test.py
