[tool.poetry]
name = "dane-download-worker"
version = "0.1.0"
description = "DANE download worker; downloads source file defined in DANE documents"
authors = ["jblom <jblom@beeldengeluid.nl>", "gbrinkmann <gbrinkmann@beeldengeluid.nl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "7.17.4"
requests = "^2.28.1"
validators = "^0.20.0"
dane = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mockito = "^1.3.3"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
black = "^22.6.0"
mypy = "0.961"
types-requests = "2.27.31"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
testpaths = [
  "tests/unit",
]
addopts = [
  "--cov",
]

[tool.coverage.run]
omit = [
  "tests/*"
]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
  "dane.*",
  "mockito",
  "validators",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
